[~] Fixed Token Error

--- a/src/resources/config.yml
+++ b/src/resources/config.yml
@@ -9,7 +9,7 @@ GLOBAL:
    # ---------------------------------------- #
 
 DISCORD:
-   TOKEN: ""
+   TOKEN: 
    
    PREFIX: "."
    STATUS: "ONLINE"
