[+] Config.yml & ConfigManager | Added Config Values for Emote & Added Method to get Emote

--- a/src/resources/config.yml
+++ b/src/resources/config.yml
@@ -17,3 +17,6 @@ DISCORD:
    ACTIVITY:
       TYPE: "WATCHING"
       MESSAGE: "{DISCORD_PREFIX}help | {WEBSITE}"
+      
+EMOTE:
+   CUSTOM_CHAT: "<:chat:949406454266339398>"
